Bug 165473 - PPTX hyperlinks to other slides do not work
Summary: PPTX hyperlinks to other slides do not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-02-26 19:57 UTC by Andres
Modified: 2025-04-02 08:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
hyperlinks not working example file (37.74 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-02-26 19:57 UTC, Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andres 2025-02-26 19:57:56 UTC
Created attachment 199477 [details]
hyperlinks not working example file

The hyperlinks to another page/slide from a Powerpoint presentation (pptx), do not work in Libreoffice Impress, in Windows.

But it does work in the following Ubuntu version.

LibreOffice 24.8.4.2 3e97788786b20d724e2ed0ea7a111abce73cab63


I attached a minimal reproducible example.
Comment 1 raal 2025-02-26 22:46:47 UTC
confirm Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e420583fee9f753e7de5a207637fda25e495ac7d
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

works in Version: 7.3.7.2 / LibreOffice Community
Comment 2 raal 2025-02-26 22:55:15 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 239bc6f4dd7966deb51254972a4b40a2621e9223 is the first bad commit
commit 239bc6f4dd7966deb51254972a4b40a2621e9223
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Mon Oct 28 18:52:10 2024 +0100

    source c638ae429e500cee147b621ed30d9fed392edd0a

175726: don't use iterateItemSurrogates for EE_FEATURE_FIELD | https://gerrit.libreoffice.org/c/core/+/175726
Comment 3 m_a_riosv 2025-02-26 23:14:44 UTC
Works fine for me with
Version: 24.8.5.2 (X86_64) / LibreOffice Community
Build ID: fddf2685c70b461e7832239a0162a77216259f22
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2025-04-01 10:13:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/719f17554e2e73563cd90593c3f7f6b0eea84f17

tdf#165473 PPTX hyperlinks to other slides do not work

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-04-02 08:35:37 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3b0bb864fbf1b94fe6acc4b3a21e90232a9abd55

tdf#165473 PPTX hyperlinks to other slides do not work

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.