tdf#165473 PPTX hyperlinks to other slides do not work

regression from
    commit c638ae429e500cee147b621ed30d9fed392edd0a
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Oct 18 16:21:10 2024 +0200
    don't use iterateItemSurrogates for EE_FEATURE_FIELD

Change-Id: Ibf7a89cb30dd11591152a7e052e4d11ea4bf9407
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183578
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 719f17554e2e73563cd90593c3f7f6b0eea84f17)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183583
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>